# SalesCaller

./: .replit  README.md  build.js  data.db  main.py  package-lock.json  package.json  package.json.backup  pyproject.toml  run.py  sample-leads.csv  sample.csv  server.js
attached_assets/: Pasted--COMPREHENSIVE-BUILD-SPEC-FOR-REPLIT-AGENT-Paste-everything-below-verbatim-into-Replit-Agent-to-1748742933216.txt  Pasted--My-recommendation-tackle-two-force-multiplier-builds-in-sequence-1-Booking-Outcome-1748752043443.txt  Pasted-Below-is-a-single-self-contained-prompt-you-can-paste-straight-into-Replit-Agent-so-it-will--1748748861037.txt  Pasted-Below-is-a-step-by-step-build-brief-for-Replit-Agent-that-will-turn-the-current-placeholder-UI-i-1748747779376.txt  Pasted-Got-it-Here-s-a-revised-one-pager-sales-funnel-tailored-to-your-CEO-s-direction-with-a-Test--1748835565206.txt  Pasted-Here-s-a-clear-step-by-step-instruction-set-you-can-pass-directly-to-the-Replit-agent-to-implement--1748836623635.txt  Pasted-Here-s-a-full-instruction-block-you-can-paste-into-Replit-Agent-to-implement-authentication-with-p-1748837484681.txt  Pasted-It-looks-as-though-Replit-Agent-has-given-you-a-thin-proof-of-concept-a-single-Python-script-or-1748745037409.txt  Pasted-Let-s-move-ahead-with-the-Python-FastAPI-rewrite-exactly-as-spec-d-Reasons-to-pivot-now-rathe-1748747971457.txt  Pasted-That-s-the-proof-right-there-You-are-the-customer-You-just-spent-240-for-75-cold-calls--1748751528530.txt  SF Restaurant Sample  - Sheet1.csv  (+2 more)
backend/: main.py
client/: index.html
prompts/: default.txt  (+5 more)
(+36 files in other folders)
